@@ -1,3 +1,8 @@
+2004-01-19 Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCicode.c (geniCodeArray): applied patch from Stas Sergeev
+	proposed in FR #877103
+
 2004-01-18 Bernhard Held <bernhard@bernhardheld.de>
 
 	* src/SDCCval.c (cheapestVal): added missing checks
